refactor user dashboard interface